--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,17 +6,44 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>480</height>
+    <width>858</width>
+    <height>752</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Main Window</string>
+   <string>VSCP Bootloader test app.</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QWidget" name="formLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>9</x>
+      <y>9</y>
+      <width>841</width>
+      <height>741</height>
+     </rect>
+    </property>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Qt Version: </string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="lblQtVersion">
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
  </widget>
  <resources>
-  <include location="../example.qrc"/>
+  <include location="../btest.qrc"/>
  </resources>
  <connections/>
 </ui>
