--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -408,9 +408,6 @@ selection-background-color: rgb(0, 0, 0);</string>
         </widget>
        </widget>
        <widget class="QWidget" name="tab_sim">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(255, 190, 111);</string>
-        </property>
         <attribute name="title">
          <string>Simulation</string>
         </attribute>
@@ -442,6 +439,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="maximum">
              <number>255</number>
             </property>
@@ -457,6 +460,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
             </property>
             <property name="maximum">
              <number>255</number>
@@ -651,6 +660,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="maximum">
              <number>255</number>
             </property>
@@ -682,6 +697,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
             </property>
             <property name="maximum">
              <number>255</number>
@@ -745,6 +766,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="maximum">
              <number>255</number>
             </property>
@@ -805,8 +832,26 @@ selection-background-color: rgb(0, 0, 0);</string>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="baseSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="maximum">
              <number>255</number>
+            </property>
+            <property name="value">
+             <number>0</number>
+            </property>
+            <property name="sliderPosition">
+             <number>0</number>
             </property>
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -827,6 +872,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
             </property>
             <property name="maximum">
              <number>255</number>
@@ -918,6 +969,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="maximum">
              <number>255</number>
             </property>
@@ -974,6 +1031,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
             </property>
             <property name="maximum">
              <number>255</number>
@@ -1041,6 +1104,12 @@ selection-background-color: rgb(0, 0, 0);</string>
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
             </property>
             <property name="maximum">
              <number>255</number>
